<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".activities.SobreNosActivity">

    <TextView
        android:id="@+id/tvsobreNos"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/about_title"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="#212121"
        android:padding="16dp"
        android:background="#F5F5F5"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        android:elevation="2dp"
        android:contentDescription="@string/about_title"/>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintTop_toBottomOf="@id/tvsobreNos"
        app:layout_constraintBottom_toTopOf="@id/separator_line"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp">

            <ImageView
                android:id="@+id/imgLogoLogin"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="32dp"
                android:contentDescription="@string/about_logo_description"
                android:src="@drawable/logo"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_app_description"
                android:textColor="#212121"
                android:textSize="14sp"
                android:layout_marginBottom="32dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_project_data_title"
                android:textColor="#D50000"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_developer_name"
                android:textColor="#212121"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_discipline_name"
                android:textColor="#212121"
                android:textSize="14sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_professor_name"
                android:textColor="#212121"
                android:textSize="14sp"
                android:layout_marginBottom="32dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_links_title"
                android:textColor="#D50000"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:id="@+id/tvEmailContato"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Email: sampaplaybeta@gmail.com"
                android:textColor="#D50000"
                android:textSize="14sp"
                android:autoLink="email"
                android:contentDescription="@string/about_contact_email_desc"/>

            <TextView
                android:id="@+id/tvLinkEquipe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Linkedln: https://www.linkedin.com/in/pedrohlsmagro/"
                android:textColor="#D50000"
                android:textSize="14sp"
                android:autoLink="web"
                android:contentDescription="@string/about_contact_email_desc"
                android:layout_marginBottom="32dp"/>

        </LinearLayout>
    </ScrollView>

    <View
        android:id="@+id/separator_line"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="#DDDDDD"
        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:menu="@menu/bottom_nav_menu"
        android:background="@android:color/white"
        app:itemIconTint="@color/bottom_nav_selector"
        app:itemTextColor="@color/bottom_nav_selector"
        android:elevation="8dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>